--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "grunt-contrib-jasmine": "^0.8.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "~0.5.0",
+    "grunt-coveralls": "^1.0.0",
     "grunt-release": "^0.7.0",
+    "grunt-template-jasmine-istanbul": "^0.3.0",
     "jshint-stylish": "^1.0.0"
   },
   "keywords": [
