--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-connect": "^0.2.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jasmine": "^0.8.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "~0.5.0",
