--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "A simple javascript library implementing cryptographic digests, HMAC and PBKDF algorithms.",
   "main": "build/digest.min.js",
   "homepage": "http://www.coding-stories.com/digest-js/",
-  "author": {
-    "name": "Jean-Christophe Sirot"
-  },
+  "author": "Jean-Christophe Sirot",
   "repository": {
     "type": "git",
-    "url": "git@github.com:jcsirot/digest.js.git"
+    "url": "git+ssh://git@github.com/jcsirot/digest.js.git"
   },
   "bugs": {
     "url": "https://github.com/jcsirot/digest.js/issues"
@@ -17,6 +15,9 @@
   "license": "GPL-3.0",
   "scripts": {
     "test": "grunt test"
+  },
+  "directories": {
+    "test": "test"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
